hoje a gente estava finalizando a tabela no html

--- a/distancias.capitais.html
+++ b/distancias.capitais.html
@@ -17,34 +17,86 @@
         <td>NATAL</td>
         <td>PALMAS</td>
         <td>PORTO ALEGRE</td>
+        <td>PORTO VELHO</td>
+        <td>RECIFE</td>
+        <td>RIO BRANCO</td>
     </tr>
     <tr>
         <td>MANAUS</td>
-        <td>------</td>
+        <td>-----</td>
         <td>5215</td>
         <td>5298</td>
         <td>3951</td>
+        <td>901</td>
+        <td>5698</td>
+        <td>1445</td>
     </tr>
     <tr>
         <td>NATAL</td>
         <td>788</td>
-        <td>-------</td>
+        <td>-----</td>
         <td>2108</td>
         <td>2348</td>
+        <td>4999</td>
+        <td>297</td>
+        <td>5533</td>
         </tr>
     <tr>
         <td>PALMAS</td>
         <td>1662</td>
         <td>1283</td>
-        <td>-------</td>
+        <td>----</td>
         <td>1690</td>
+        <td>3240</td>
+        <td>2058</td>
+        <td>3764</td>
     </tr>
     <tr>
         <td>PORTO ALEGRE</td>
         <td>3296</td>
         <td>3852</td>
         <td>1712</td>
-        <td>--------</td>
+        <td>----</td>
+        <td>3662</td>
+        <td>3779</td>
+        <td>4196</td>
+
+    <tr>
+        <td>PORTO VELHO</td>
+        <td>901</td>
+        <td>4999</td>
+        <td>3240</td>
+        <td>3662</td>
+        <td>-----</td>
+        <td>4712</td>
+        <td>544</td>
+    <tr>
+        <td>RECIFE</td>
+        <td>5698</td>
+        <td>297</td>
+        <td>2058</td>
+        <td>3779</td>
+        <td>4712</td>
+        <td>----</td>
+        <td>544</td>
+    <tr>
+         <td>RIO BRANCO</td>
+         <td>1445</td>
+         <td>5533</td>
+         <td>3764</td>
+         <td>4196</td>
+         <td>544</td>
+         <td>5243</td>
+         <td>----</td>
+    </tr>
+
+        
+
+    </tr>
+
+    </tr>
+
+        
     </tr>
     </table>
 </body>
